--- a/ui/cop_stac_dialog.ui
+++ b/ui/cop_stac_dialog.ui
@@ -167,14 +167,24 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="5" column="0" colspan="2">
+       <widget class="QPushButton" name="btnQueryGnosis">
+        <property name="text">
+         <string>🌍 Query GNOSIS Earth for SRTM Elevation Data</string>
+        </property>
+        <property name="toolTip">
+         <string>Retrieve SRTM elevation data from GNOSIS Earth API for the selected area</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
        <widget class="QLabel" name="labelServiceProvider">
         <property name="text">
          <string>Service Provider:</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
+      <item row="6" column="1">
        <widget class="QLineEdit" name="lineServiceProvider">
         <property name="placeholderText">
          <string>Data/service provider (optional)</string>
