Add known DGGS server implementations to dropdown
Based on OGC API - DGGS implementations registry:
- GNOSIS Map Server (https://maps.gnosis.earth/ogcapi) - SRTM data
- TerraNexus OGC API Server (https://terranexus.pangaeainnovations.com/ogcapi)
- GeoServer placeholder for self-hosted instances

All servers implement OGC API - DGGS standard

--- a/ui/cop_stac_dialog.ui
+++ b/ui/cop_stac_dialog.ui
@@ -199,7 +199,12 @@
         </item>
         <item>
          <property name="text">
-          <string>https://api.example.com/dggs</string>
+          <string>https://terranexus.pangaeainnovations.com/ogcapi</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>https://geoserver.example.org/ogcapi</string>
          </property>
         </item>
        </widget>
